# GithubHelperBot

./: .gitignore  CMakeLists.txt  docker-compose.yml  main.cpp
src/: GithubHelperBot.cpp  GithubHelperBot.h
